[package]
name = "rng-toolbox"
version = "0.1.0"
description = "Tauri app backend"
authors = ["Prasanna Paithankar"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rng_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7.2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
getrandom = "0.3.3"
base64 = "0.22.1"
rand = "0.9.2"
aes = "0.8.4"
block-modes = "0.9.1"
hex = "0.4.3"
aes-gcm = "0.10.3"
nix = "0.30.1"
tauri-plugin-shell = "2"

